added staking apr calculation based on subgraph + caching
